Fix: whitespace above nav-list in doc/show

--- a/src/lacr-demo/app/assets/stylesheets/application.css
+++ b/src/lacr-demo/app/assets/stylesheets/application.css
@@ -207,5 +207,11 @@ mark{
 }
 
 #noty_topRight_layout_container{
+  /*Fix notification overflow with the nav menu*/
   margin-top: 50px !important;
+}
+
+#doc_nav::before {
+  /*Remove white-space above nav-list on doc/show */
+  content: none;
 }
